# sigmazero

./: .gitignore  .gitmodules  Makefile  meson.build  meson_options.txt  readme.md  requirements.txt
common/: output_thread.cpp  output_thread.hpp
common/uci/: uci.cpp
example/: config.yml  main.cpp  random_engine.cpp  random_engine.hpp
include/: chess  eval-handcrafted
kvist/: config.yml  engine.cpp
orchestrator/: main.py  slave.py
scripts/: dummy.sh  elo_est.py  has_cuda.py  mux.sh  olympen.sh  olympen_users.sh  rel_from_abs_path.py  spyoly.sh  ssh.py  uci2san.py
sigmazero/: arena.cpp  base64.cpp  batch_selfplay.cpp  config.yml  develop.yml  dummynet.hpp  local.sh  main.cpp  master.py  master.sh  mcts.cpp  mcts.hpp  mcts_config.txt  olympen.sh  olympen.yml  oskar.sh  oskar.yml  pch.hpp  readme.md  rules.cpp  rules.hpp  script.sh  search.cpp  search.hpp  selfplay.cpp  selfplay_dummy.cpp  selfplay_worker.cpp  selfplay_worker.hpp  sigmanet.cpp  sigmanet.hpp  sigmazero.cpp  sync_queue.hpp  test_drive.cpp  training.cpp  util.cpp  util.hpp  utility.cpp  utility.hpp
sigmazero/drl/: action_encodings.cpp  action_encodings.hpp  init.py  sigma_test.cpp  sigmanet.cpp  sigmanet.hpp
sigmazero/mcts/: mcts.cpp  mcts.hpp  mcts_model.cpp  mcts_model.hpp  misc.cpp  misc.hpp  network.cpp  network.hpp  node.cpp  node.hpp  policy.cpp  policy_handcrafted.cpp  policy_handcrafted.hpp  rollout.cpp  rollout.hpp  self_play.cpp  self_play.hpp
sigmazero/mcts_demo_engine/: compile.txt  main.cpp  random_mcts_engine.cpp  random_mcts_engine.hpp
sigmazero/orchestrator/: develop.yml  launch.py  main.py  slave.py
sigmazero/selfplay/: main.cpp
sigmazero/training/: main.cpp
sigmazero/verifications/: loss_test_play.cpp
src/: main.cpp
src/drl/: init.py  model.py  readme.md  sigma_test.cpp  sigmanet.cpp  sigmanet.hpp  train.py
src/mcts/: misc.cpp  misc.hpp  node.cpp  node.hpp  policy.cpp  policy.hpp  policy_handcrafted.cpp  rollout.cpp  rollout.hpp
uci/: sync_queue.hpp  uci.cpp  uci.hpp
